bld/wipfc/test/pos/pos1.ipf
:userdoc.
:title.Positive 1
:docprof.
:h1 res=1.Heading 1
:i1 id='1'.Heading 1
Text outside of a paragraph
:euserdoc.
