bld/wipfc/test/neg/neg2.ipf
:userdoc.
:title.Negative 2
:docprof.
:h1.Heading 1
:p.Text inside of a paragraph
.* malformed document, missing euserdoc
